--- a/composer.json
+++ b/composer.json
@@ -27,10 +27,10 @@
       }
   },
   "require": {
-    "laravel/framework": "~5.5.0|~5.6.0|~5.7.0|~5.8.0|~6.0.0",
-    "php": ">=7.0.0"
+    "laravel/framework": "~6.0.0",
+    "php": ">=7.2.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^6"
+    "phpunit/phpunit": "^8"
   }
 }
