Update run-test workflow (#716)
* [Github/Workflows]: Remove sqlite3 installation from run-test workflow.

* [Github/Workflows]: Add new job to upload coverage to scrutinizer.

* [Github/Workflows]: Fix syntax of new job.

* [Github/Workflows]: Add the required runs-on field.

* [Github/Workflows]: Fix needs attribute.

* [Github/Workflows]: Replace the non-working new job by a conditional step.

* [Github/Workflows]: Fix syntax.

* [Github/Workflows]: Add xdebug extension to the php setup step.

* [Github/Workflows]: Add xdebug to coverage section of php setup.

* [Github/Workflows]: Add delay to upload coverage, in order to sync with scrutinizer.

* [Github/Workflows]: Test incrementing delay.

* [Github/Workflows]: Remove delay.

* [Github/Workflows]: Another test for upload coverage.

* [Github/Workflows]: Checkout pull request HEAD commit instead of merge commit.

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -25,11 +25,8 @@ jobs:
         steps:
             -   name: Checkout code
                 uses: actions/checkout@v2
-
-            -   name: Install SQLite 3
-                run: |
-                    sudo apt-get update
-                    sudo apt-get install sqlite3
+                with:
+                    ref: ${{ github.event.pull_request.head.sha }}
 
             -   name: Cache dependencies
                 uses: actions/cache@v2
@@ -42,7 +39,7 @@ jobs:
                 with:
                     php-version: ${{ matrix.php }}
                     extensions: curl, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite, iconv
-                    coverage: none
+                    coverage: xdebug
 
             -   name: Install dependencies
                 run: |
@@ -51,3 +48,11 @@ jobs:
 
             -   name: Execute tests
                 run: vendor/bin/phpunit
+
+                # Upload coverage only for latest versions.
+            -   name: Upload coverage to scrutinizer-ci
+                if: matrix.php == '7.4' && matrix.laravel == '8.*' && matrix.dependency-version == 'prefer-stable'
+                run: |
+                    vendor/bin/phpunit --coverage-clover=coverage.clover
+                    wget https://scrutinizer-ci.com/ocular.phar
+                    php ocular.phar code-coverage:upload --format=php-clover coverage.clover
