--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,7 @@
 /.gitattributes     export-ignore
 /.gitignore         export-ignore
-/.travis.yml        export-ignore
-/phpunit.xml.dist   export-ignore
+/.github            export-ignore
 /.scrutinizer.yml   export-ignore
+/.styleci.yml       export-ignore
+/phpunit.xml        export-ignore
 /tests              export-ignore
