[config]: Update internal links to new wiki pages. Remove assets folder form releases. (#733)

--- a/.gitattributes
+++ b/.gitattributes
@@ -5,3 +5,4 @@
 /.styleci.yml       export-ignore
 /phpunit.xml        export-ignore
 /tests              export-ignore
+/assets             export-ignore
